[2026/06/21]ローカル全文検索アプリ（Lucene + Tika）の実装と JRE 同梱配布